--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Tai mano dienoraštis besimokant programavimo. Tikiuosi, jog įrašai padės ne tik man pačiai geriau suprasti šį amatą, bet ir įkvėpti daugiau moterų rinktis programavimo sritį
 baseurl: "" # the subpath of your site, e.g. /blog
+excerpt_separator: <!--more-->
 url: "http://example.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
