--- a/_config.yml
+++ b/_config.yml
@@ -15,20 +15,17 @@
 # in the templates via {{ site.myvariable }}.
 title: Moterys programuoja
 description: > # this means to ignore newlines until "baseurl:"
-  Tai mano dienoraštis besimokant programavimo. Tikiuosi, jog įrašai padės ne tik man pačiai geriau
-  suprasti šį amatą, bet ir įkvėpti daugiau moterų rinktis programavimo sritį
+  Tai mano dienoraštis besimokant programavimo. Tikiuosi, jog įrašai padės ne tik man pačiai geriau suprasti šį amatą, bet ir įkvėpti daugiau moterų rinktis programavimo sritį
 baseurl: "" # the subpath of your site, e.g. /blog
-logo: "/images/logo.jpg"
+logo: "/images/logo.jpg" #figure out the right path
 og_image: "/images/logo.jpg"
 excerpt_separator: <!--more-->
 url: "http://www.girlscode.lt" # the base hostname & protocol for your site
 twitter_username: ingavaicia
 github_username:  ingava
-pagination:
-  limit: false
-  per_page: 10
 
-gems: [jekyll-seo-tag, octopress-paginate]
+gems:
+  - jekyll-seo-tag
 
 # Build settings
 markdown: kramdown
